[metadata]
name = hello
author = OpenStack Foundation
author-email = openstack-dev@lists.openstack.org
summary = OpenStack's setup automation in a reusable form
description-file = README
home-page = https://launchpad.net/pbr
license = Apache-2
classifier =
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: Linux 
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
[files]
packages =
    hello
[entry_points]
console_scripts =
    zyx = hello:main
